Add rudimentary study creation

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -1,14 +1,29 @@
 {
+	"body": "Body",
 	"colon": "%1$s: ",
+	"connectStudyDescription": "Use the following methods to save data to this study",
+	"createStudy": "Create study",
 	"initDescription": "Init",
+	"listStudies": "List studies",
 	"login": "Login",
+	"errorFaultyData": "Faulty data (%1$s)",
+	"errorFaultyResponse": "Faulty response",
 	"errorMissingData": "Missing data",
 	"errorNetwork": "Network error",
+	"errorNotFound": "Not found",
 	"errorTooShort": "\"%1$s\" needs to consist of at least %2$d characters.",
 	"errorUnknown": "Unknown error",
 	"errorUnauthorized": "Not authorized",
+	"notFound": "Not found",
 	"password": "Password",
 	"passwordAgain": "Password again",
 	"passwordMismatch": "The passwords dont match",
+	"privateKey": "Private Key",
+	"save": "Save",
+	"solana": "Solana",
+	"solanaTest": "Solana - Test",
+	"studyName": "Study name",
+	"type": "Type",
+	"url": "Url",
 	"username": "Username"
 }
