Add capabilities to save data and columns

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -1,29 +1,38 @@
 {
 	"body": "Body",
 	"colon": "%1$s: ",
+	"columnData": "Column data",
+	"columnName": "Column name",
 	"connectStudyDescription": "Use the following methods to save data to this study",
 	"createStudy": "Create study",
+	"howToConnectMyApp": "How to connect my app",
 	"initDescription": "Init",
 	"listStudies": "List studies",
 	"login": "Login",
 	"errorFaultyData": "Faulty data (%1$s)",
 	"errorFaultyResponse": "Faulty response",
+	"errorMessageIsTooLong": "Message is too long.",
 	"errorMissingData": "Missing data",
 	"errorNetwork": "Network error",
 	"errorNotFound": "Not found",
+	"errorStudyHasNoColumns": "Study has no columns. Was it initialized?",
 	"errorTooShort": "\"%1$s\" needs to consist of at least %2$d characters.",
 	"errorUnknown": "Unknown error",
 	"errorUnauthorized": "Not authorized",
 	"notFound": "Not found",
+	"noColumnsInfo": "You need to set columns or no data will be saved",
 	"password": "Password",
 	"passwordAgain": "Password again",
 	"passwordMismatch": "The passwords dont match",
 	"privateKey": "Private Key",
+	"saveData": "Save data",
 	"save": "Save",
+	"setColumns": "Set columns",
 	"solana": "Solana",
 	"solanaTest": "Solana - Test",
 	"studyName": "Study name",
 	"type": "Type",
 	"url": "Url",
-	"username": "Username"
+	"username": "Username",
+	"viewData": "View data"
 }
