Refactor to allow multiple questionnaires in a single wallet

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -1,22 +1,26 @@
 {
 	"admin": "Admin",
+	"blockchainName": "Name",
 	"body": "Body",
 	"colon": "%1$s: ",
 	"columnData": "Column data",
 	"columnName": "Column name",
-	"connectStudyDescription": "Use the following methods to save data to this study",
-	"createStudy": "Create study",
+	"connectQuestionnaireDescription": "Use the following methods to save data to this questionnaire",
+	"createQuestionnaire": "Create questionnaire",
+	"createBlockchainAccount": "Create blockchain account",
 	"howToConnectMyApp": "How to connect my app",
 	"initDescription": "Init",
-	"listStudies": "List studies",
+	"listBlockchainAccounts": "List blockchain accounts",
+	"listQuestionnaires": "List questionnaires",
 	"login": "Login",
+	"errorDenotationIsTooLarge": "The Questionnaire denotation is too large. There are too many questionnaires saved to this wallet.",
 	"errorFaultyData": "Faulty data (%1$s)",
 	"errorFaultyResponse": "Faulty response",
 	"errorMessageIsTooLong": "Message is too long.",
 	"errorMissingData": "Missing data",
 	"errorNetwork": "Network error",
 	"errorNotFound": "Not found",
-	"errorStudyHasNoColumns": "Study has no columns. Was it initialized?",
+	"errorQuestionnaireHasNoColumns": "Questionnaire has no columns. Was it initialized?",
 	"errorTooShort": "\"%1$s\" needs to consist of at least %2$d characters.",
 	"errorUnknown": "Unknown error",
 	"errorUnauthorized": "Not authorized",
@@ -26,12 +30,12 @@
 	"passwordAgain": "Password again",
 	"passwordMismatch": "The passwords dont match",
 	"privateKey": "Private Key",
+	"questionnaireName": "Questionnaire name",
 	"saveData": "Save data",
 	"save": "Save",
 	"setColumns": "Set columns",
 	"solana": "Solana",
 	"solanaTest": "Solana - Test",
-	"studyName": "Study name",
 	"type": "Type",
 	"url": "Url",
 	"username": "Username",
