Move and improve ViewQuestionnaireData

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -9,6 +9,8 @@
 	"connectQuestionnaireDescription": "Use the following methods to save data to this questionnaire",
 	"createQuestionnaire": "Create questionnaire",
 	"createBlockchainAccount": "Create blockchain account",
+	"dataKey": "Data key",
+	"denotation": "Denotation",
 	"howToConnectMyApp": "How to connect my app",
 	"initDescription": "Init",
 	"listBlockchainAccounts": "List blockchain accounts",
@@ -25,12 +27,15 @@
 	"errorTooShort": "\"%1$s\" needs to consist of at least %2$d characters.",
 	"errorUnknown": "Unknown error",
 	"errorUnauthorized": "Not authorized",
+	"load": "Load",
 	"notFound": "Not found",
 	"noColumnsInfo": "You need to set columns or no data will be saved",
 	"password": "Password",
 	"passwordAgain": "Password again",
 	"passwordMismatch": "The passwords dont match",
-	"privateKey": "Private Key",
+	"preselectQuestionnaire": "Preselect questionnaire",
+	"privateKey": "Private key",
+	"publicKey": "Public key",
 	"questionnaireName": "Questionnaire name",
 	"saveData": "Save data",
 	"save": "Save",
