--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -23,6 +23,7 @@
 	"errorMissingData": "Missing data",
 	"errorNetwork": "Network error",
 	"errorNotFound": "Not found",
+	"errorPageHasError": "Page %1$s had an error and could not be loaded.",
 	"errorQuestionnaireHasNoColumns": "Questionnaire has no columns. Was it initialized?",
 	"errorTooShort": "\"%1$s\" needs to consist of at least %2$d characters.",
 	"errorUnknown": "Unknown error",
