Rework ViewQuestionnaireData page and change data format from JSON to CSV

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -8,13 +8,19 @@
 	"colon": "%1$s: ",
 	"columnData": "Column data",
 	"columnName": "Column name",
+	"compare": "Compare",
 	"connectQuestionnaireDescription": "Use the following methods to save data to this questionnaire",
 	"createQuestionnaire": "Create questionnaire",
 	"createBlockchainAccount": "Create blockchain account",
 	"dataKey": "Data key",
 	"denotation": "Denotation",
+	"download": "Download",
+	"fileToCompareWith": "File to compare with",
+	"foundNoChanges": "Found no changes",
 	"howToConnectMyApp": "How to connect my app",
 	"initDescription": "Init",
+	"infoDataCacheTime": "Data was cached at %1$s",
+	"infoDataCharacterCount": "Dataset has %1$d characters",
 	"listBlockchainAccounts": "List blockchain accounts",
 	"listQuestionnaires": "List questionnaires",
 	"login": "Login",
@@ -32,6 +38,7 @@
 	"errorUnknown": "Unknown error",
 	"errorUnauthorized": "Not authorized",
 	"load": "Load",
+	"noData": "No data",
 	"notFound": "Not found",
 	"noColumnsInfo": "You need to set columns or no data will be saved",
 	"password": "Password",
@@ -41,6 +48,7 @@
 	"privateKey": "Private key",
 	"publicKey": "Public key",
 	"questionnaireName": "Questionnaire name",
+	"reload": "Reload",
 	"saveData": "Save data",
 	"save": "Save",
 	"setColumns": "Set columns",
