--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -2,8 +2,9 @@
 	"admin": "Admin",
 	"apiPassword": "API password",
 	"blockchainName": "Name",
+	"blockchainAccount": "Blockchain account",
 	"body": "Body",
-	"changeQuestionnaire": "Change questionnaire",
+	"changeQuestionnaireSettings": "Change questionnaire settings",
 	"changeBlockchainAccount": "Change blockchain account",
 	"colon": "%1$s: ",
 	"columnData": "Column data",
@@ -44,16 +45,31 @@
 	"password": "Password",
 	"passwordAgain": "Password again",
 	"passwordMismatch": "The passwords dont match",
-	"preselectQuestionnaire": "Preselect questionnaire",
 	"privateKey": "Private key",
 	"publicKey": "Public key",
 	"questionnaireName": "Questionnaire name",
 	"reload": "Reload",
 	"saveData": "Save data",
 	"save": "Save",
+	"selectQuestionnaire": "Select questionnaire",
 	"setColumns": "Set columns",
 	"solana": "Solana",
 	"solanaTest": "Solana - Test",
+	"tooltipApiPassword": "This password must be transmitted by an application when using the API for saving data to this questionnaire.",
+	"tooltipBlockchainPrivateKey": "Needed to create memo transactions. The matching public key will be automatically generated.",
+	"tooltipBlockchainPublic": "The public key of your wallet under which all transactions (/study data) are saved.",
+	"tooltipCompare": "Compare data from cache with the contents of a CSV file.",
+	"tooltipConnectAppHelp": "Get information on how to connect other apps to XXX so that can automatically save data to the blockchain.",
+	"tooltipCreateBlockchainAccount": "Add login data to an existing blockchain account. This is were questionnaire data will be saved to.",
+	"tooltipCreateQuestionnaire": "Add a questionnaire. The questionnaire will be connected to a blockchain and provide the necessary endpoints to save your study data to the blockchain.",
+	"tooltipDataCachedTime": "Data will not always be loaded from the blockchain but instead cached on your device to speed up loading times for repeated loading attempts..",
+	"tooltipDataKey": "The data key is used to encrypt / decrypt data that are saved to the blockchain.",
+	"tooltipDenotation": "All data from this questionnaire are tagged with this number. It is needed so XXX knows which transactions in the blockchain wallet belong to this questionnaire. Must be unique for the selected blockchain wallet.",
+	"tooltipSelectQuestionnaire": "Automatically fill out the form to load questionnaire data from this instance.",
+	"tooltipReload": "Reload data from the blockchain and replace the local cache.",
+	"tooltipSaveData": "Save questionnaire data into the blockchain.",
+	"tooltipSetColumns": "Set columns for your data (the column definition will also be saved in the blockchain. Only entries that belong to a preset column will be saved. Other data will be ignored.",
+	"tooltipViewQuestionnaireData": "View data of a questionnaire that was created on this server or provide data manually to view data that was saved by another instance.",
 	"type": "Type",
 	"url": "Url",
 	"username": "Username",
