Add user management

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -6,6 +6,7 @@
 	"body": "Body",
 	"changeQuestionnaireSettings": "Change questionnaire settings",
 	"changeBlockchainAccount": "Change blockchain account",
+	"changePassword": "Change password",
 	"colon": "%1$s: ",
 	"columnData": "Column data",
 	"columnName": "Column name",
@@ -13,6 +14,7 @@
 	"connectQuestionnaireDescription": "Use the following methods to save data to this questionnaire",
 	"createQuestionnaire": "Create questionnaire",
 	"createBlockchainAccount": "Create blockchain account",
+	"createUser": "Create user",
 	"dataKey": "Data key",
 	"denotation": "Denotation",
 	"download": "Download",
@@ -27,6 +29,7 @@
 	"login": "Login",
 	"errorDenotationIsTooLarge": "The Questionnaire denotation is too large. There are too many questionnaires saved to this wallet.",
 	"errorAlreadyExists": "Already exists (%1$s)",
+	"errorCannotChangeOwnUser": "You cannot change your own account.",
 	"errorFaultyData": "Faulty data (%1$s)",
 	"errorFaultyResponse": "Faulty response",
 	"errorMessageIsTooLong": "Message is too long.",
@@ -36,6 +39,7 @@
 	"errorPageHasError": "Page %1$s had an error and could not be loaded.",
 	"errorQuestionnaireHasNoColumns": "Questionnaire has no columns. Was it initialized?",
 	"errorTooShort": "\"%1$s\" needs to consist of at least %2$d characters.",
+	"errorUsernameAlreadyExists": "Username already exists.",
 	"errorUnknown": "Unknown error",
 	"errorUnauthorized": "Not authorized",
 	"home": "Home",
@@ -57,12 +61,14 @@
 	"setColumns": "Set columns",
 	"solana": "Solana",
 	"solanaTest": "Solana - Test",
+	"tooltipAdminUser": "Admin user can manage blockchain accounts and user. All users can manage (their own questionnaires)",
 	"tooltipApiPassword": "This password must be transmitted by an application when using the API for saving data to this questionnaire.",
 	"tooltipBlockchainPrivateKey": "Needed to create memo transactions. The matching public key will be automatically generated.",
 	"tooltipBlockchainPublic": "The public key of your wallet under which all transactions (/study data) are saved.",
 	"tooltipCompare": "Compare data from cache with the contents of a CSV file.",
 	"tooltipConnectAppHelp": "Get information on how to connect other apps to XXX so that can automatically save data to the blockchain.",
 	"tooltipCreateBlockchainAccount": "Add login data to an existing blockchain account. This is were questionnaire data will be saved to.",
+	"tooltipCreateNewUser": "Create a new user.",
 	"tooltipCreateQuestionnaire": "Add a questionnaire. The questionnaire will be connected to a blockchain and provide the necessary endpoints to save your study data to the blockchain.",
 	"tooltipDataCachedTime": "Data will not always be loaded from the blockchain but instead cached on your device to speed up loading times for repeated loading attempts..",
 	"tooltipDataKey": "The data key is used to encrypt / decrypt data that are saved to the blockchain.",
