Add delete endpoints

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -10,6 +10,7 @@
 	"colon": "%1$s: ",
 	"columnData": "Column data",
 	"columnName": "Column name",
+	"confirmDeleteEntry": "Are you sure you want to delete this entry?",
 	"compare": "Compare",
 	"connectQuestionnaireDescription": "Use the following methods to save data to this questionnaire",
 	"createQuestionnaire": "Create questionnaire",
@@ -27,12 +28,14 @@
 	"listBlockchainAccounts": "List blockchain accounts",
 	"listQuestionnaires": "List questionnaires",
 	"login": "Login",
+	"errorCannotDeleteYourself": "You cannot delete yourself.",
 	"errorDenotationIsTooLarge": "The Questionnaire denotation is too large. There are too many questionnaires saved to this wallet.",
 	"errorAlreadyExists": "Already exists (%1$s)",
 	"errorCannotChangeOwnUser": "You cannot change your own account.",
 	"errorFaultyData": "Faulty data (%1$s)",
 	"errorFaultyResponse": "Faulty response",
 	"errorMessageIsTooLong": "Message is too long.",
+	"errorMustDeleteAllQuestionnaires": "There are still %1$d questionnaires connected to this blockchain account.",
 	"errorMissingData": "Missing data",
 	"errorNetwork": "Network error",
 	"errorNotFound": "Not found",
@@ -72,6 +75,7 @@
 	"tooltipCreateQuestionnaire": "Add a questionnaire. The questionnaire will be connected to a blockchain and provide the necessary endpoints to save your study data to the blockchain.",
 	"tooltipDataCachedTime": "Data will not always be loaded from the blockchain but instead cached on your device to speed up loading times for repeated loading attempts..",
 	"tooltipDataKey": "The data key is used to encrypt / decrypt data that are saved to the blockchain.",
+	"tooltipDeleteEntry": "Delete this entry.",
 	"tooltipDenotation": "All data from this questionnaire are tagged with this number. It is needed so XXX knows which transactions in the blockchain wallet belong to this questionnaire. Must be unique for the selected blockchain wallet.",
 	"tooltipSelectQuestionnaire": "Automatically fill out the form to load questionnaire data from this instance.",
 	"tooltipReload": "Reload data from the blockchain and replace the local cache.",
