Rearrange navigation buttons

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -3,6 +3,7 @@
 	"apiPassword": "API password",
 	"blockchainName": "Name",
 	"blockchainAccount": "Blockchain account",
+	"blockchainAccounts": "Blockchain accounts",
 	"body": "Body",
 	"changeQuestionnaireSettings": "Change questionnaire settings",
 	"changeBlockchainAccount": "Change blockchain account",
@@ -25,8 +26,6 @@
 	"initDescription": "Init",
 	"infoDataCacheTime": "Data was cached at %1$s",
 	"infoDataCharacterCount": "Dataset has %1$d characters",
-	"listBlockchainAccounts": "List blockchain accounts",
-	"listQuestionnaires": "List questionnaires",
 	"login": "Login",
 	"errorCannotDeleteYourself": "You cannot delete yourself.",
 	"errorDenotationIsTooLarge": "The Questionnaire denotation is too large. There are too many questionnaires saved to this wallet.",
@@ -57,6 +56,7 @@
 	"privateKey": "Private key",
 	"publicKey": "Public key",
 	"questionnaireName": "Questionnaire name",
+	"questionnaires": "Questionnaires",
 	"reload": "Reload",
 	"saveData": "Save data",
 	"save": "Save",
@@ -66,19 +66,18 @@
 	"solanaTest": "Solana - Test",
 	"tooltipAdminUser": "Admin user can manage blockchain accounts and user. All users can manage (their own questionnaires)",
 	"tooltipApiPassword": "This password must be transmitted by an application when using the API for saving data to this questionnaire.",
+	"tooltipBlockchainAccount": "Blockchain accounts can only be created by admins and contain the login data to an existing blockchain wallet. This is were questionnaire data will be saved to.",
 	"tooltipBlockchainPrivateKey": "Needed to create memo transactions. The matching public key will be automatically generated.",
 	"tooltipBlockchainPublic": "The public key of your wallet under which all transactions (/study data) are saved.",
 	"tooltipCompare": "Compare data from cache with the contents of a CSV file.",
 	"tooltipConnectAppHelp": "Get information on how to connect other apps to XXX so that can automatically save data to the blockchain.",
-	"tooltipCreateBlockchainAccount": "Add login data to an existing blockchain account. This is were questionnaire data will be saved to.",
-	"tooltipCreateNewUser": "Create a new user.",
-	"tooltipCreateQuestionnaire": "Add a questionnaire. The questionnaire will be connected to a blockchain and provide the necessary endpoints to save your study data to the blockchain.",
 	"tooltipDataCachedTime": "Data will not always be loaded from the blockchain but instead cached on your device to speed up loading times for repeated loading attempts..",
 	"tooltipDataKey": "The data key is used to encrypt / decrypt data that are saved to the blockchain.",
 	"tooltipDeleteEntry": "Delete this entry.",
 	"tooltipDenotation": "All data from this questionnaire are tagged with this number. It is needed so XXX knows which transactions in the blockchain wallet belong to this questionnaire. Must be unique for the selected blockchain wallet.",
-	"tooltipSelectQuestionnaire": "Automatically fill out the form to load questionnaire data from this instance.",
+	"tooltipQuestionnaires": "Questionnaires are connected to a blockchain and provide the necessary endpoints to save your study data to the blockchain.",
 	"tooltipReload": "Reload data from the blockchain and replace the local cache.",
+	"tooltipSelectQuestionnaire": "Automatically fill out the form to load questionnaire data from this instance.",
 	"tooltipSaveData": "Save questionnaire data into the blockchain.",
 	"tooltipSetColumns": "Set columns for your data (the column definition will also be saved in the blockchain. Only entries that belong to a preset column will be saved. Other data will be ignored.",
 	"tooltipViewQuestionnaireData": "View data of a questionnaire that was created on this server or provide data manually to view data that was saved by another instance.",
