--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -46,7 +46,7 @@
 	"errorUnknown": "Unknown error",
 	"errorUnauthorized": "Not authorized",
 	"home": "Home",
-	"listUser": "List user",
+	"listUsers": "List users",
 	"load": "Load",
 	"noData": "No data",
 	"notFound": "Not found",
@@ -64,7 +64,7 @@
 	"setColumns": "Set columns",
 	"solana": "Solana",
 	"solanaTest": "Solana - Test",
-	"tooltipAdminUser": "Admin user can manage blockchain accounts and user. All users can manage (their own questionnaires)",
+	"tooltipAdminUser": "Admin user can manage blockchain accounts and users. All users can manage (their own questionnaires)",
 	"tooltipApiPassword": "This password must be transmitted by an application when using the API for saving data to this questionnaire.",
 	"tooltipBlockchainAccount": "Blockchain accounts can only be created by admins and contain the login data to an existing blockchain wallet. This is were questionnaire data will be saved to.",
 	"tooltipBlockchainPrivateKey": "Needed to create memo transactions. The matching public key will be automatically generated.",
