Update content of ConnectAppHelp

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -13,7 +13,6 @@
 	"columnName": "Column name",
 	"confirmDeleteEntry": "Are you sure you want to delete this entry?",
 	"compare": "Compare",
-	"connectQuestionnaireDescription": "Use the following methods to save data to this questionnaire",
 	"createQuestionnaire": "Create questionnaire",
 	"createBlockchainAccount": "Create blockchain account",
 	"createUser": "Create user",
@@ -45,6 +44,7 @@
 	"errorUsernameAlreadyExists": "Username already exists.",
 	"errorUnknown": "Unknown error",
 	"errorUnauthorized": "Not authorized",
+	"header": "Header",
 	"home": "Home",
 	"listUsers": "List users",
 	"load": "Load",
