Add study support

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -5,8 +5,8 @@
 	"blockchainAccount": "Blockchain account",
 	"blockchainAccounts": "Blockchain accounts",
 	"body": "Body",
-	"changeQuestionnaireSettings": "Change questionnaire settings",
 	"changeBlockchainAccount": "Change blockchain account",
+	"changeSettings": "Change settings",
 	"changePassword": "Change password",
 	"colon": "%1$s: ",
 	"columnData": "Column data",
@@ -15,17 +15,18 @@
 	"compare": "Compare",
 	"createQuestionnaire": "Create questionnaire",
 	"createBlockchainAccount": "Create blockchain account",
+	"createStudy": "Create study",
 	"createUser": "Create user",
 	"dataKey": "Data key",
 	"denotation": "Denotation",
 	"download": "Download",
+	"editStudy": "Edit study",
 	"fileToCompareWith": "File to compare with",
 	"foundNoChanges": "Found no changes",
-	"howToConnectMyApp": "How to connect my app",
-	"initDescription": "Init",
+	"howToConnect": "How to connect",
+	"initDescription": "Please provide the credentials of your admin user:",
 	"infoDataCacheTime": "Data was cached at %1$s",
 	"infoDataCharacterCount": "Dataset has %1$d characters",
-	"login": "Login",
 	"errorCannotDeleteYourself": "You cannot delete yourself.",
 	"errorDenotationIsTooLarge": "The Questionnaire denotation is too large. There are too many questionnaires saved to this wallet.",
 	"errorAlreadyExists": "Already exists (%1$s)",
@@ -36,6 +37,7 @@
 	"errorMustDeleteAllQuestionnaires": "There are still %1$d questionnaires connected to this blockchain account.",
 	"errorMissingData": "Missing data",
 	"errorNetwork": "Network error",
+	"errorNoBlockchainAccounts": "You first have to create a blockchain account.",
 	"errorNotFound": "Not found",
 	"errorPageHasError": "Page %1$s had an error and could not be loaded.",
 	"errorPasswordMismatch": "The passwords dont match",
@@ -47,14 +49,17 @@
 	"header": "Header",
 	"home": "Home",
 	"listUsers": "List users",
+	"login": "Login",
 	"load": "Load",
 	"noData": "No data",
 	"notFound": "Not found",
 	"noColumnsInfo": "You need to set columns or no data will be saved",
+	"optional": "Optional",
 	"password": "Password",
 	"passwordAgain": "Password again",
 	"privateKey": "Private key",
 	"publicKey": "Public key",
+	"questionnaire": "Questionnaire",
 	"questionnaireName": "Questionnaire name",
 	"questionnaires": "Questionnaires",
 	"reload": "Reload",
@@ -64,6 +69,8 @@
 	"setColumns": "Set columns",
 	"solana": "Solana",
 	"solanaTest": "Solana - Test",
+	"studies": "Studies",
+	"studyName": "Study name",
 	"tooltipAdminUser": "Admin user can manage blockchain accounts and users. All users can manage (their own questionnaires)",
 	"tooltipApiPassword": "This password must be transmitted by an application when using the API for saving data to this questionnaire.",
 	"tooltipBlockchainAccount": "Blockchain accounts can only be created by admins and contain the login data to an existing blockchain wallet. This is were questionnaire data will be saved to.",
@@ -71,7 +78,8 @@
 	"tooltipBlockchainPublic": "The public key of your wallet under which all transactions (/study data) are saved.",
 	"tooltipCompare": "Compare data from cache with the contents of a CSV file.",
 	"tooltipConnectAppHelp": "Get information on how to connect other apps to XXX so that can automatically save data to the blockchain.",
-	"tooltipDataCachedTime": "Data will not always be loaded from the blockchain but instead cached on your device to speed up loading times for repeated loading attempts..",
+	"tooltipCreateQuestionnaire": "Automatically create a questionnaire inside this study.",
+	"tooltipDataCachedTime": "Data will not always be loaded from the blockchain but instead cached on your device to speed up loading times for repeated loading attempts.",
 	"tooltipDataKey": "The data key is used to encrypt / decrypt data that are saved to the blockchain.",
 	"tooltipDeleteEntry": "Delete this entry.",
 	"tooltipDenotation": "All data from this questionnaire are tagged with this number. It is needed so XXX knows which transactions in the blockchain wallet belong to this questionnaire. Must be unique for the selected blockchain wallet.",
@@ -80,6 +88,7 @@
 	"tooltipSelectQuestionnaire": "Automatically fill out the form to load questionnaire data from this instance.",
 	"tooltipSaveData": "Save questionnaire data into the blockchain.",
 	"tooltipSetColumns": "Set columns for your data (the column definition will also be saved in the blockchain. Only entries that belong to a preset column will be saved. Other data will be ignored.",
+	"tooltipStudies": "A study is a collection of questionnaires.",
 	"tooltipViewQuestionnaireData": "View data of a questionnaire that was created on this server or provide data manually to view data that was saved by another instance.",
 	"type": "Type",
 	"url": "Url",
