Change naming convention from edit to set

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -7,6 +7,7 @@
 	"body": "Body",
 	"changeBlockchainAccount": "Change blockchain account",
 	"changeSettings": "Change settings",
+	"changeStudy": "Change study",
 	"changePassword": "Change password",
 	"colon": "%1$s: ",
 	"columnData": "Column data",
@@ -20,7 +21,6 @@
 	"dataKey": "Data key",
 	"denotation": "Denotation",
 	"download": "Download",
-	"editStudy": "Edit study",
 	"fileToCompareWith": "File to compare with",
 	"foundNoChanges": "Found no changes",
 	"howToConnect": "How to connect",
