--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -68,6 +68,7 @@
 	"save": "Save",
 	"selectQuestionnaire": "Select questionnaire",
 	"setColumns": "Set columns",
+	"showDataLogs": "Show Logs",
 	"solana": "Solana",
 	"solanaTest": "Solana - Test",
 	"studies": "Studies",
