Set the project name to SciDataSeal

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -79,12 +79,12 @@
 	"tooltipBlockchainPrivateKey": "Needed to create memo transactions. The matching public key will be automatically generated.",
 	"tooltipBlockchainPublic": "The public key of your wallet under which all transactions (/study data) are saved.",
 	"tooltipCompare": "Compare data from cache with the contents of a CSV file.",
-	"tooltipConnectAppHelp": "Get information on how to connect other apps to XXX so that can automatically save data to the blockchain.",
+	"tooltipConnectAppHelp": "Get information on how to connect other apps to SciDataSeal so that can automatically save data to the blockchain.",
 	"tooltipCreateQuestionnaire": "Automatically create a questionnaire inside this study.",
 	"tooltipDataCachedTime": "Data will not always be loaded from the blockchain but instead cached on your device to speed up loading times for repeated loading attempts.",
 	"tooltipDataKey": "The data key is used to encrypt / decrypt data that are saved to the blockchain.",
 	"tooltipDeleteEntry": "Delete this entry.",
-	"tooltipDenotation": "All data from this questionnaire are tagged with this number. It is needed so XXX knows which transactions in the blockchain wallet belong to this questionnaire. Must be unique for the selected blockchain wallet.",
+	"tooltipDenotation": "All data from this questionnaire are tagged with this number. It is needed so SciDataSeal knows which transactions in the blockchain wallet belong to this questionnaire. Must be unique for the selected blockchain wallet.",
 	"tooltipStringDenotation": "The string representation of the denotation as it will be saved in the blockchain.",
 	"tooltipQuestionnaires": "Questionnaires are connected to a blockchain and provide the necessary endpoints to save your study data to the blockchain.",
 	"tooltipReload": "Reload data from the blockchain and replace the local cache.",
