Add an option to manually sync to the blockchain

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -94,7 +94,9 @@
 	"tooltipSaveData": "Save questionnaire data into the blockchain.",
 	"tooltipSetColumns": "Set columns for your data (the column definition will also be saved in the blockchain. Only entries that belong to a preset column will be saved. Other data will be ignored.",
 	"tooltipStudies": "A study is a collection of questionnaires.",
+	"tooltipSyncBlockchainNow": "Sync all unsaved data to the blockchain now (instead of waiting for the next automatic sync). This option mostly exists for testing purposes.",
 	"tooltipViewQuestionnaireData": "View data of a questionnaire that was created on this server or provide data manually to view data that was saved by another instance.",
+	"tooltipUserSettingsDesc": "Change your profile password.",
 	"type": "Type",
 	"url": "Url",
 	"username": "Username",
