--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -22,6 +22,7 @@
 	"createUser": "Create user",
 	"dataKey": "Data key",
 	"denotation": "Denotation",
+	"done": "Done",
 	"download": "Download",
 	"fileToCompareWith": "File to compare with",
 	"foundNoChanges": "Found no changes",
@@ -52,9 +53,11 @@
 	"errorUnauthorized": "Not authorized",
 	"header": "Header",
 	"home": "Home",
+	"infoMnemonic": "Save this seed phrase NOW and store it in a safe place. It will never be shown to you again. You need it to be able to recover your wallet.",
 	"listUsers": "List users",
 	"login": "Login",
 	"load": "Load",
+	"mnemonic": "Seed phrase",
 	"noData": "No data",
 	"notFound": "Not found",
 	"optional": "Optional",
@@ -99,6 +102,7 @@
 	"tooltipUserSettingsDesc": "Change your profile password.",
 	"type": "Type",
 	"url": "Url",
+	"useExisting": "Use existing",
 	"username": "Username",
 	"userSettings": "User settings",
 	"viewData": "View data",
