Only set dataKey and apiPassword in the study instead for each questionnaire separately

--- a/locales/strings/en.json
+++ b/locales/strings/en.json
@@ -79,7 +79,7 @@
 	"studies": "Studies",
 	"studyName": "Study name",
 	"tooltipAdminUser": "Admin user can manage blockchain accounts and users. All users can manage (their own questionnaires)",
-	"tooltipApiPassword": "This password must be transmitted by an application when using the API for saving data to this questionnaire.",
+	"tooltipApiPassword": "This password must be transmitted by an application when using the API for saving data to this questionnaire. Can be any text combination.",
 	"tooltipBlockchainAccount": "Blockchain accounts can only be created by admins and contain the login data to an existing blockchain wallet. This is were questionnaire data will be saved to.",
 	"tooltipBlockchainPrivateKey": "Needed to create memo transactions. The matching public key will be automatically generated.",
 	"tooltipBlockchainPublic": "The public key of your wallet under which all transactions (/study data) are saved.",
@@ -87,7 +87,7 @@
 	"tooltipConnectAppHelp": "Get information on how to connect other apps to SciDataSeal so that can automatically save data to the blockchain.",
 	"tooltipCreateQuestionnaire": "Automatically create a questionnaire inside this study.",
 	"tooltipDataCachedTime": "Data will not always be loaded from the blockchain but instead cached on your device to speed up loading times for repeated loading attempts.",
-	"tooltipDataKey": "The data key is used to encrypt / decrypt data that are saved to the blockchain.",
+	"tooltipDataKey": "The data key is used to encrypt / decrypt data that are saved to the blockchain. Can be any text combination.",
 	"tooltipDeleteEntry": "Delete this entry.",
 	"tooltipDenotation": "All data from this questionnaire are tagged with this number. It is needed so SciDataSeal knows which transactions in the blockchain wallet belong to this questionnaire. Must be unique for the selected blockchain wallet.",
 	"tooltipStringDenotation": "The string representation of the denotation as it will be saved in the blockchain.",
@@ -106,6 +106,8 @@
 	"username": "Username",
 	"userSettings": "User settings",
 	"viewData": "View data",
+	"warnChangingApiPassword": "You will also have to update the api key in all applications that are connected to this study or they loose access to SciDataSeal.",
+	"warnChangingDataKey": "Changing the data key will result in already existing data to not being decryptable anymore.",
 	"warnChangingDenotation": "Changing the denotation will result in already existing data from the blockchain wallet not being accessible anymore. If there already is data saved in the wallet under this denotation, it will show up in the data for this questionnaire.",
 	"warnChangingBlockchainAccount": "Changing the blockchain account will result in already existing data from the former blockchain wallet not being accessible anymore (existing data will not be transferred to the new blockchain account).",
 	"warnNoColumns": "You need to set columns or no data will be saved.",
